--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='profile.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='signup.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='basic.css') }}">
 </head>
 <body>
     <header>
