--- a/Website/templates/base2.html
+++ b/Website/templates/base2.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../static/profile.css">
     <link rel="stylesheet" href="../static/login.css">
     <link rel="stylesheet" href="../static/signup.css">
+    <link rel="stylesheet" href="../static/basic.css">
 </head>
 <body>
     <header>
