--- a/Website/static/base.css
+++ b/Website/static/base.css
@@ -8,6 +8,10 @@ body {
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
+.containter {
+    border: 1px solid black;
+}
+
 body.fade-out {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
@@ -443,6 +447,11 @@ body.dark-mode {
 }
 
 .dark-mode .category-links a {
+    color: #ffffff;
+}
+
+.dark-mode .categories {
+    background-color: #1e1e1e;
     color: #ffffff;
 }
 
