--- a/Website/static/homepage.css
+++ b/Website/static/homepage.css
@@ -8,7 +8,8 @@
 .homepage-center-container {
     text-align: center; /* Center the text */
     position: relative;
-    left: 10%;
+    left: 5%;
+    top: -5%;
 }
 
 .homepage-title {
