--- a/Website/static/profile.css
+++ b/Website/static/profile.css
@@ -5,13 +5,11 @@
 .row {
     display: flex;
     align-items: center;
-    /* background-color: #121212; */
 }
 
 .col {
     flex: 1;
     padding: 5px;
-    /* border: 1px solid black; */
 }
 
 .col h4{
@@ -32,7 +30,7 @@
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
-    border: 3px solid #007bff;
+    border: 1px solid black;
     display: none;
 }
 
@@ -98,7 +96,7 @@
 
 .btn:hover {
     cursor: pointer;
-    background-color: #ccc;
+    background-color: #e0dcdc;
 }
 
 .upload-btn {
@@ -106,7 +104,7 @@
     border: 2px solid transparent; /* Default border */
     background-color: transparent;
     border-radius: 5px; /* Optional: Add rounded corners */
-    width: 140px;
+    width: 170px;
     height: 50px;
     font-size: 15px;
     border-color: #007bff; /* Blue border for upload button */
@@ -138,7 +136,7 @@
 
 .textbox {
     width: calc(70% - 1px); /* Adjust the width to fit two textboxes in one row */
-    padding: 10px;
+    padding: 8px;
     border-radius: 10px;
 }
 
@@ -173,7 +171,7 @@
 }
 
 /* Ninth Row */
-.password-text {
+.password-text, .profile-username, .profile-first-name, .profile-last-name, .profile-email {
     font-size: 18px;
     font-weight: bold;
 }
@@ -217,14 +215,10 @@
 }
 
 #save-button:hover {
-    background-color: #ccc;
+    background-color: #e0dcdc;
 }
 
 /* Dark mode styles */
-body.dark-mode .profile-container {
-    background-color: #121212;
-    color: #ffffff;
-}
 
 body.dark-mode .col {
     color: #ffffff;
