--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -23,7 +23,7 @@
             &#9776; <!-- Unicode character for the hamburger icon -->
         </div>
         <span class="brand-name">
-            <a href="./" class="brand">CineSurfer</a>
+            <a href="{% if current_user.is_authenticated %}basic.html{% else %}./{% endif %}" class="brand">CineSurfer</a>
         </span>
         <div class="search-container">
             <form action="{{ url_for('views.search') }}" method="GET">
@@ -36,8 +36,8 @@
             <i class="fas fa-user-alt"></i>
             <div class="dropdown-menu">
                 {% if current_user.is_authenticated %}
-                    <a href="profile.html">Profile</a>
-                    <a href="settings.html">Settings</a>
+                <a href="{{ url_for('views.profile_page') }}">Profile</a>
+                    <a href="{{ url_for('views.settings_page') }}">Settings</a>
                     <a href="{{ url_for('auth.logout') }}">Logout</a>
                 {% else %}
                     <a href="{{ url_for('auth.login') }}">Sign In</a>
@@ -58,12 +58,12 @@
 
     <nav id="side-panel">
         <div class="nav-links">
-            <a href="./"><i class="fas fa-home"></i> HomePage</a>
-            <a href="user_favourites.html"><i class="fas fa-star"></i> Favourites</a>
-            <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
+            <a href="{% if current_user.is_authenticated %}basic.html{% else %}./{% endif %}"><i class="fas fa-home"></i> HomePage</a>
+            <a href="{{ url_for('views.user_favourites') }}"><i class="fas fa-star"></i> Favourites</a>
+            <a href="{{ url_for('views.settings_page') }}"><i class="fas fa-cog"></i> Settings</a>
         </div>
         <div class="logout-container">
-            <a href="#logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            <a href="{{ url_for('auth.logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </nav>
 
