advanced and intermediate showing

--- a/Website/templates/Advanced.html
+++ b/Website/templates/Advanced.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} 
 {% block title %} Advanced {% endblock %} 
 {% block content%} 
-    {% comment %} <h2>Number of Movies by Production Country</h2>
-    <div id="chart">{{chart1|safe}}</div> {% endcomment %}
+    {# <h2>Number of Movies by Production Country</h2> #}
+    <div id="chart">{{chart1|safe}}</div> 
 
     <h2>Chart 1</h2>
     <div id="chart">{{chart2|safe}}</div>
