--- a/Website/templates/intermediate.html
+++ b/Website/templates/intermediate.html
@@ -4,18 +4,19 @@
     <h2>Number of Movie Releases by Genre Over Time</h2>
     <div id="chart">{{ chart1|safe }}</div>
 
-    <h2>Average Movie Runtime by Decade</h2>
+   <<h2>Average Movie Runtime by Decade</h2>
     <div id="chart2">{{ chart2|safe }}</div>
     
     <h2>Top 10 Starred Actors/Actresses Across Genres</h2>
     <div id="chart3">{{ chart3|safe }}</div>
     
-    <h2>Most Associated Cast Members for Top 10 Directors</h2>
-    <div id="chart4">{{ chart4|safe }}</div>
+    <!--<h2>Most Associated Cast Members for Top 10 Directors</h2>
+    <div id="chart4">{{ chart4|safe }}</div> -->
     
     <h2>Average Popularity and Sentiment of Movies by Genre</h2>
     <div id="chart5">{{ chart5|safe }}</div>
 
-    <h2>Popularity Success of Genres by Director</h2>
-    <div id="chart6">{{ chart6|safe }}</div>
+   <!---- <h2>Popularity Success of Genres by Director</h2>
+    <div id="chart6">{{ chart6|safe }}</div> -->
+
 {% endblock %}
