--- a/Website/templates/basic.html
+++ b/Website/templates/basic.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %} 
 {% block title %} Basic {% endblock %} 
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='basic.css') }}">
+{% endblock %}
+
 {% block content %} 
     <div id="side-panel" class="side-panel">
         <!-- Side panel content here -->
