--- a/Website/templates/advanced.html
+++ b/Website/templates/advanced.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} 
-{% block title %} Advance {% endblock %} 
+{% block title %} Advanced {% endblock %} 
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='advance.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='advanced.css') }}">
 {% endblock %}
 
 {% block content%} 
