--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -94,5 +94,7 @@
     {% endwith %}
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="//d3js.org/d3.v3.min.js"></script>
 </body>
 </html>
