--- a/Website/templates/base2.html
+++ b/Website/templates/base2.html
@@ -60,5 +60,6 @@
         {% endif %}
     {% endwith %}
     <script src={{ url_for('static', filename='script.js') }}></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.js"></script>
 </body>
 </html>
