--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='signup.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='basic.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='personalized.css') }}">
+    
 </head>
 <body>
     <header>
