--- a/Website/templates/base2.html
+++ b/Website/templates/base2.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../static/login.css">
     <link rel="stylesheet" href="../static/signup.css">
     <link rel="stylesheet" href="../static/basic.css">
+    <link rel="stylesheet" href="../static/personalized.css">
 </head>
 <body>
     <header>
