--- a/Website/templates/movie_details.html
+++ b/Website/templates/movie_details.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Movie Details {% endblock %}
 {% block content %}
+
 <div class="movie-details">
     <div class="movie-details-title">Movie Details</div>
     <div id="movie-details-fav" class="movie-details-fav" data-movie-id="{{ movie.movie_id }}">&#x2661;</div>
@@ -9,7 +10,7 @@
             <div class="movie-details-info">
                 <div class="movie-details-info-1">
                     <div class="movie-details-movie">{{ movie.title | default('N/A') }}</div>
-                    <div class="movie-details-details">{{ movie.release_year | default('N/A') }} ‧ {{ movie.genres | join(', ') | default('N/A') }} ‧ {{ movie.runtime | default('N/A') }} mins</div>
+                    <div class="movie-details-details">{{ movie.release_year | default('N/A') }} ‧ {{ movie.genres | map(attribute='name') | join(', ') | default('N/A') }} ‧ {{ movie.runtime | default('N/A') }} mins</div>
                 </div>
                 <div class="movie-details-info-2">
                     <div class="movie-details-status">{{ movie.status | default('N/A') }}</div>
@@ -18,12 +19,12 @@
             <div class="movie-details-synopsis"><p>{{ movie.overview | default('N/A') }}</p></div>
             <div class="movie-details-bts">
                 <div class="movie-details-ori-lang"><strong>Original Language: </strong>{{ movie.original_language | default('N/A') }}</div>
-                <div class="movie-details-director"><strong>Director: </strong>{{ movie.directors | join(', ') | default('N/A') }}</div>
-                <div class="movie-details-writer"><strong>Writer: </strong>{{ movie.writers | join(', ') | default('N/A') }}</div>
-                <div class="movie-details-cast"><strong>Cast: </strong>{{ movie.actors | join(', ') | default('N/A') }}</div>
+                <div class="movie-details-director"><strong>Director: </strong>{{ directors | join(', ') | default('N/A') }}</div>
+                <div class="movie-details-writer"><strong>Writer: </strong>{{ writers | join(', ') | default('N/A') }}</div>
+                <div class="movie-details-cast"><strong>Cast: </strong>{{ actors | join(', ') | default('N/A') }}</div>
                 <div class="movie-details-release-date"><strong>Release Date: </strong>{{ movie.release_date | default('N/A') }}</div>
             </div>
         </div>
     </div>
-</div>
+
 {% endblock %}
