--- a/Website/templates/personalized.html
+++ b/Website/templates/personalized.html
@@ -11,11 +11,13 @@
         <div class="fav-carousell">
             {% for movie in recommendations %}
             <div class="fav-card">
+                <button class="fav-card-delete">X</button>
                 <div class="personalized-card-title">{{ movie.title }}</div>
-                <div class="personalized-card-details">{{ movie.release_year }} ‧ {{ movie.genres | join(', ') }} ‧ {{ movie.runtime }} mins</div>
-                <div class="personalized-card-synopsis"><p>{{ movie.overview }}</p></div>
+                <div class="personalized-card-details">{{ movie.release_year }} ‧ {{ movie.genres | map(attribute='name') | join(', ') }} ‧ {{ movie.runtime }} mins</div>
+                <div class="personalized-card-synopsis">
+                    <p>{{ (movie.overview[:150] if movie.overview else 'N/A')  }}{% if movie.overview and movie.overview|length > 100 %}...{% endif %}</p>
+                </div>
                 <button class="personalized-card-btn"><a href="{{ url_for('views.movie_details_page', movie_id=movie.movie_id) }}">See More</a></button>
-                <button class="fav-card-esc"><a href='#'>&#x2A02;</a></button>
             </div>
             {% endfor %}
         </div>
